# chessviz-Rabkovevgeniy

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
.github/workflows/: build.yml
headers/: ExceptionHandler.h  Visualizer.h
sources/: Consts.cpp  ExceptionHandler.cpp  Visualizer.cpp  main.cpp
src/: ChessBoard.cpp  Piece.cpp  Visualizer.cpp  Visualizer.h  main.cpp
src/Chessvizlib/: ExceptionHandler.cpp  Visualizer.cpp
src/headers/: ChessBoard.h  Consts.h  ExceptionHandler.h  Piece.h  Visualizer.h
test/: test_list.cpp
